--- a/build.gradle
+++ b/build.gradle
@@ -17,3 +17,7 @@ patchPluginXml {
 repositories {
     mavenCentral()
 }
+
+dependencies {
+    compile group: 'com.h2database', name: 'h2', version: '1.3.148'
+}
