--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,12 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.owasp:dependency-check-gradle:6.0.3'
+    }
+}
+
 plugins {
     id 'org.jetbrains.intellij' version '0.4.21'
 }
@@ -21,3 +30,6 @@ repositories {
 dependencies {
     compile group: 'com.h2database', name: 'h2', version: '1.3.148'
 }
+
+apply plugin: 'org.owasp.dependencycheck'
+
